[gd_scene load_steps=9 format=3 uid="uid://sddf8tqylegb"]

[ext_resource type="Script" path="res://world component/hook place new/hook_place_new.gd" id="1_usftx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sxtar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qf7o"]
size = Vector2(10, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xr1pj"]
size = Vector2(10, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ee2ds"]
size = Vector2(10, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_foynv"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gvatr"]
radius = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kgnx"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HookPlaceNew" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_usftx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sxtar")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(0, 15)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_0qf7o")

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2(0, 45)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = SubResource("RectangleShape2D_xr1pj")

[node name="RigidBody2D3" type="RigidBody2D" parent="."]
position = Vector2(0, 75)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3"]
shape = SubResource("RectangleShape2D_ee2ds")

[node name="PlayerConnect" type="RigidBody2D" parent="."]
position = Vector2(0, 90)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerConnect"]
shape = SubResource("CircleShape2D_foynv")

[node name="DetectPlayer" type="Area2D" parent="PlayerConnect"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerConnect/DetectPlayer"]
shape = SubResource("CircleShape2D_gvatr")

[node name="Panel" type="Panel" parent="PlayerConnect"]
custom_minimum_size = Vector2(8, 8)
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
scale = Vector2(1.73, 1.73)
pivot_offset = Vector2(4, 4)
theme_override_styles/panel = SubResource("StyleBoxFlat_0kgnx")
metadata/_edit_use_anchors_ = true

[node name="PreHookInteractTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CoolingTimer" type="Timer" parent="."]
one_shot = true

[node name="PinJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../RigidBody2D")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(0, 30)
node_a = NodePath("../RigidBody2D")
node_b = NodePath("../RigidBody2D2")

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2(0, 60)
node_a = NodePath("../RigidBody2D2")
node_b = NodePath("../RigidBody2D3")

[node name="PinJoint2D4" type="PinJoint2D" parent="."]
position = Vector2(0, 90)
node_a = NodePath("../RigidBody2D3")
node_b = NodePath("../PlayerConnect")
